# FOC_YummyYae_ESP32

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  学期项目.epro
APP/: app.py  tcp_protocol.md
BSPDriver/: MT6701.c  MT6701.h
FOC/: foc_calibrate.c  foc_calibrate.h  foc_driver_esp32.c  foc_lib.c  foc_lib.h  foc_task.c  foc_task.h
STM32_Example/: test_mt6826_guess.txt
STM32_Example/Core/Inc/: main.h  stm32g4xx_it.h
STM32_Example/Core/Src/: main.c  tim.c  usart.c
STM32_Example/MDK-ARM/: FOC_YummyYae.uvguix.CTY  FOC_YummyYae.uvprojx  startup_stm32g431xx.lst
STM32_Example/MDK-ARM/FOC_YummyYae/: FOC_YummyYae.axf  FOC_YummyYae.build_log.htm  FOC_YummyYae.hex  FOC_YummyYae.htm  FOC_YummyYae.lnp  FOC_YummyYae.map  FOC_YummyYae_FOC_YummyYae.dep  adc.crf  adc.d  bldcmotor.crf  bspdriver.crf  bspdriver.d  ctrltask.crf  ctrltask.d  dma.crf  dma.d  flash_storage.crf  flash_storage.d  flashstorage.crf  flashstorage.d  foc_calibrate.crf  foc_calibrate.d  foc_log.crf  foc_log.d  foc_utils.crf  foc_utils.d  focmotor.crf  focmotor.d  foctask.crf  foctask.d  gpio.crf  gpio.d  main.crf  main.d  mt6701.crf  mt6701.d  mt6826s.crf  mt6826s.d  pid.crf  pid.d  (+58 more)
STM32_Example/Task/: CTRLtask.h  FOCtask.c
STM32_Example/USER/: foc_utils.c  foc_utils.h  mt6826s.c  pid.c
STM32_Example/USER/FOC/: foc_calibrate.h
components/foc/: CMakeLists.txt
components/sensors/: CMakeLists.txt
components/tasks/: CMakeLists.txt
docs/: architecture.md  hardware_pins.md  udp_protocol.md
main/: CMakeLists.txt  main.c
reference/STM32_Example/: .mxproject  FOC_YummyYae.ioc
(+44 files in other folders)
